[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]

# runtime
tokio = { version = "1.44.0", features = ["full"] }
futures-util = { version = "0.3.31" }

# http server
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = { version = "0.5.0" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# serialize and deserialize
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }

# time
chrono = { version = "0.4.40" }

# validator
validator = { version = "0.20.0", features = ["derive"] }

# jwt
jsonwebtoken = { version = "9.3.1" }

# encode and decode
base64 = { version = "0.22.1" }
hex = { version = "0.4.3" }
bincode = { version = "2.0.1" }

# solana libs
solana-client = { version = "2.2.0" }
solana-sdk = { version = "2.2.0" }
solana-transaction-status = { version = "2.2.0" }
spl-associated-token-account = { version = "6.0.0" }
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "8.0.0" }
solana-message = { version = "2.2.0" }

# tracing and logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# database
sea-orm = { version = "1.1.8", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "sea-orm-internal",
] }

# error handling
thiserror = { version = "2.0.12" }

# redis
redis = { version = "0.29.5", features = ["tokio-comp"] }

# random
rand = { version = "0.9.0" }

borsh = { version = "1.5.7" }
