[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]

# runtime
tokio = { version = "1.44.0", features = ["full"] }
futures-util = { version = "0.3.31" }

# http server
axum = { version = "0.8.3", features = ["macros"] }
axum-macros = { version = "0.5.0" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# serialize and deserialize
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }

# time
chrono = { version = "0.4.40" }

# validator
validator = { version = "0.20.0", features = ["derive"] }

# jwt
jsonwebtoken = { version = "9.3.1" }

# encode and decode
base64 = { version = "0.22.1" }
hex = { version = "0.4.3" }

# tracing and logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# database
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "sea-orm-internal",
] }

# error handling
thiserror = { version = "2.0.12" }

# redis
redis = { version = "0.30.0", features = ["tokio-comp"] }

# random
rand = { version = "0.9.0" }

alloy = { version = "0.15.6" }
alloy-chains = { version = "0.2.0" }

# enum utils
strum = { version = "0.27.1" }

# http client
url = { version = "2.5.4" }
reqwest = { version = "0.12.15", features = ["json"] }
