[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
alloy-chains = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
chrono = { workspace = true }

web3 = { path = "../web3" }
shared = { path = "../shared" }
