[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }

thiserror = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }

jsonwebtoken = { workspace = true }

tower-http = { workspace = true }

tracing = { workspace = true }

validator = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

shared = { path = "../shared" }
database = { path = "../database" }

solana-sdk = { workspace = true }
solana-client = { workspace = true }

redis = { workspace = true }

rand = { workspace = true }

hex = { workspace = true }

nacl = { workspace = true }

chrono = { workspace = true }
