[package]
name = "operator"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
alloy-chains = { workspace = true }
alloy = { workspace = true }

shared = { path = "../shared" }
pools = { path = "../pools" }
database = { path = "../database" }
web3 = { path = "../web3" }
