[package]
name = "pools"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-chains = { workspace = true }
alloy = { workspace = true }

web3 = { path = "../web3" }
shared = { path = "../shared" }
database = { path = "../database" }


[dev-dependencies]
tokio = { workspace = true }
