[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }

thiserror = { workspace = true }

sea-orm = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

redis = { workspace = true }

base64 = { workspace = true }
