[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }

thiserror = { workspace = true }

sea-orm = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

redis = { workspace = true }

base64 = { workspace = true }

alloy = { workspace = true }
alloy-chains = { workspace = true }

url = { workspace = true }

reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
