[package]
name = "web3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }

alloy = { workspace = true }
alloy-chains = { workspace = true }

strum = { workspace = true }

url = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }

shared = { path = "../shared" }
